--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
     .example-2 .content-bottom {
       
     }
+    
+    .example-2 .content-top .icon {
+      position: absolute;
+      top: 1em;
+      left: 1em;
+      color: white;
+    }
   
     .example-2 .title,
     .example-2 .view-more {
@@ -188,6 +195,9 @@
       <div class="col-xs-4 col-md-4 block">
         <div class="content" style="background-color:#fdcb12;">
           <div class="content-top" style="background-image:url(http://www.belling.co.uk/media/623452/belling_homepage_rollovers.png);">
+            <div class="icon">
+              <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+            </div>
             <div class="title">
               Product Brochure
             </div>
@@ -203,6 +213,9 @@
       <div class="col-xs-4 col-md-4 block">
         <div class="content" style="background-color:#92c24a;">
           <div class="content-top" style="background-image:url(http://www.belling.co.uk/media/623453/belling_homepage_rollovers2.png);">
+            <div class="icon">
+              <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+            </div>
             <div class="title">
               Cookshop
             </div>
@@ -218,6 +231,9 @@
       <div class="col-xs-4 col-md-4 block">
         <div class="content" style="background-color:#1eb3d1;">
           <div class="content-top" style="background-image:url(http://www.belling.co.uk/media/623454/belling_homepage_rollovers3.png);">
+            <div class="icon">
+              <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+            </div>
             <div class="title">
               Latest
             </div>
