--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   
      .content {
       position: absolute;
-      top: 1em;
-      left: 1em;
-      right: 1em;
-      bottom: 1em;
+      top: 15px;
+      left: 15px;
+      right: 15px;
+      bottom: 15px;
       overflow: hidden
     }
   
@@ -83,8 +83,9 @@
     
     .example-2 .content-top .icon {
       position: absolute;
-      top: 1em;
-      left: 1em;
+      top: 15px;
+      left: 15px;
+      font-size: 24px;
       color: white;
     }
   
@@ -95,8 +96,8 @@
     
     .example-2 .title {
       position: absolute;
-      bottom: 1em;
-      font-size: 2em;
+      bottom: 15px;
+      font-size: 32px;
       text-transform: uppercase;
       left: 0;
       right: 0;
