--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
   
     .block:hover .content-top,
     .block:focus .content-top,
-    .block:active .content-top {
+    .block:active .content-top,
+    .content:hover .content-top,
+    .content:focus .content-top,
+    .content:active .content-top {
       -webkit-transform: translateY(-50%);
       -moz-transform:    translateY(-50%);
       -ms-transform:     translateY(-50%);
@@ -76,7 +79,10 @@
     
     .block:hover .content-bottom,
     .block:focus .content-bottom,
-    .block:active .content-bottom {
+    .block:active .content-bottom,
+    .content:hover .content-bottom,
+    .content:focus .content-bottom,
+    .content:active .content-bottom{
       -webkit-transform: translateY(50%);
       -moz-transform:    translateY(50%);
       -ms-transform:     translateY(50%);
@@ -155,7 +161,10 @@
     
     .example-2 .block:hover .view-more,
     .example-2 .block:active .view-more,
-    .example-2 .block:focus .view-more {
+    .example-2 .block:focus .view-more,
+    .example-2 .content:hover .view-more,
+    .example-2 .content:active .view-more,
+    .example-2 .content:focus .view-more {
       opacity: 1;
     }
   
